# fretsy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/fretsy/: __init__.py  __main__.py  _diagram.py  _library.py  _version.py
tests/: test_diagram.py  test_library.py  test_save.py
